libs/toolkit-macros-tests/tests/ui/fail/client_not_trait_path.rs
use toolkit_macros::gear;

#[gear(name="x", capabilities=[stateful], client=123)]
pub struct X;

fn main() {}
